[gd_scene load_steps=7 format=3 uid="uid://ja75at0ohv8r"]

[ext_resource type="Script" path="res://UI/pause.gd" id="1_r4hx4"]
[ext_resource type="FontFile" uid="uid://dil87v40s01fr" path="res://Fonts/Sniglet/Sniglet-Regular.ttf" id="1_rdqfa"]
[ext_resource type="FontFile" uid="uid://dyi0eqi3tv4rm" path="res://Fonts/Patrick_Hand/PatrickHand-Regular.ttf" id="2_o1rqi"]
[ext_resource type="Texture2D" uid="uid://tlyne27jmg3h" path="res://Arte 2d/Props/pocima  sin borde menu.png" id="3_24mje"]
[ext_resource type="PackedScene" uid="uid://cqnkyuwuq33lb" path="res://UI/options.tscn" id="4_rdrst"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8cupn"]
content_margin_bottom = 10.0
color = Color(1, 1, 1, 1)
thickness = 3

[node name="Pause" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)
script = ExtResource("1_r4hx4")

[node name="MainMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -90.5
offset_right = 100.0
offset_bottom = 90.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="MainMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_rdqfa")
theme_override_font_sizes/font_size = 48
text = "Pausa"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainMenu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 7
theme_override_styles/separator = SubResource("StyleBoxLine_8cupn")

[node name="GridContainer" type="GridContainer" parent="MainMenu"]
layout_mode = 2
columns = 2

[node name="Potion1" type="TextureRect" parent="MainMenu/GridContainer"]
layout_mode = 2
texture = ExtResource("3_24mje")
expand_mode = 2
stretch_mode = 5

[node name="Continue" type="Label" parent="MainMenu/GridContainer"]
layout_mode = 2
focus_mode = 2
theme_override_fonts/font = ExtResource("2_o1rqi")
theme_override_font_sizes/font_size = 24
text = "Continuar"
horizontal_alignment = 1

[node name="Potion2" type="TextureRect" parent="MainMenu/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("3_24mje")
expand_mode = 2
stretch_mode = 5

[node name="Options" type="Label" parent="MainMenu/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_o1rqi")
theme_override_font_sizes/font_size = 24
text = "Opciones"
horizontal_alignment = 1

[node name="Potion3" type="TextureRect" parent="MainMenu/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("3_24mje")
expand_mode = 2
stretch_mode = 5

[node name="QuitGame" type="Label" parent="MainMenu/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_o1rqi")
theme_override_font_sizes/font_size = 24
text = "Salir del juego"
horizontal_alignment = 1

[node name="Options" parent="." instance=ExtResource("4_rdrst")]
visible = false
layout_mode = 1
offset_left = -144.5
offset_top = -124.0
offset_right = 144.5
offset_bottom = 124.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01

[connection signal="return_pressed" from="Options" to="." method="_on_options_return_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
